# VinanPetLtd-2

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
assets/js/: list_filter_collapse.js
templates/: base.html  home.html  index.html  messages.html  navbar.html  report.html  report_summary.html  submitted.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
vinanpetreport/: asgi.py  settings.py  urls.py  wsgi.py
vr/: admin.py  forms.py  models.py  urls.py  views.py
vr/migrations/: 0001_initial.py  0002_auto_20230915_0004.py  0003_auto_20230915_1521.py  0004_auto_20230915_1528.py  0005_alter_vinanpetltd_pump_5_difference.py  0006_alter_vinanpetltd_tank_1_opening.py  0007_alter_vinanpetltd_tank_1_opening.py  0008_auto_20230916_0528.py  0009_auto_20230928_2059.py  0010_vinanpetltdaccount.py  0011_delete_vinanpetltdaccount.py  0012_alter_vinanpetltd_transaction_date.py  0013_auto_20231002_1214.py  0014_auto_20231002_1247.py  0015_alter_vinanpetltd_entry_date.py  0016_alter_vinanpetltd_entry_date.py
vr/static/vr/css/: job_application.css
